Add Auth and Noauth filters, Add Login and register with profile  components
The project is at a point of basic functionality as follows, a user can log in and add products of the system and view the store with products listed with a category tabs menu. A user can view a single product as well as editing it, they can also see their order only after placing it. Finally the user has the ability to edit their profile and they can logout as well.

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -167,7 +167,7 @@ footer .copyrights {
         padding: 0 1rem;
     }
     header .menu-item {
-        background-color: rgba(244, 245, 246, 1);
+        /* background-color: rgba(244, 245, 246, 1); */
         border-top: 1px solid rgba(242, 242, 242, 1);
         margin: 0 15px;
         width: calc(100% - 30px);
@@ -207,3 +207,9 @@ footer .copyrights {
   #scroll-back-up:hover {
     background-color: #555;
   }
+
+  /* Profile Details */
+ .logged-user-name{
+    background-color: #555;
+    
+ }
